--- a/template.yaml
+++ b/template.yaml
@@ -1,5 +1,5 @@
 
-WSTemplateFormatVersion: "2010-09-09"
+AWSTemplateFormatVersion: "2010-09-09"
 Transform: AWS::Serverless-2016-10-31
 Description: >
   AutoOps contains useful operational processes represented as a state machines with AWS StepFunctions.
@@ -53,6 +53,16 @@ Resources:
         - LambdaInvokePolicy:
             FunctionName: !Ref CreateEbsTagsFromEc2Function
 
+  LoadEbsTagAutoUpdatingInputFunction:
+    Type: 'AWS::Serverless::Function'
+    Properties:
+      Handler: app.lambda_handler
+      Runtime: python3.8
+      Description: ''
+      MemorySize: 128
+      Timeout: 30
+      CodeUri: functions/LoadEbsTagAutoUpdatingInput
+
   CreateEbsTagsFromEc2Function:
     Type: 'AWS::Serverless::Function'
     Properties:
@@ -66,16 +76,6 @@ Resources:
       Environment:
         Variables:
           TAGS_TO_SYNC: 'Name,Project'
-
-  LoadEbsTagAutoUpdatingInputFunction:
-    Type: 'AWS::Serverless::Function'
-    Properties:
-      Handler: app.lambda_handler
-      Runtime: python3.8
-      Description: ''
-      MemorySize: 128
-      Timeout: 30
-      CodeUri: functions/LoadEbsTagAutoUpdatingInput
 
 
 Outputs:
