--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,6 @@
 samconfig.toml
+packaged.yaml
+packaged-out.yaml
 .aws-sam/
 samples/*
 # Created by https://www.gitignore.io/api/osx,linux,python,windows,pycharm,visualstudiocode
